# ffjet

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simulate_jet_SED.py  simulate_jet_image.py  simulate_jet_image_log.py
src/jetfuncs/: _core.py
src/jetfuncs/synchrotron_integrals/: Fx.txt  Gx.txt  Hx.txt
src/jetfuncs/synchrotron_integrals/GIx/: GIx_p=2.0.txt  GIx_p=2.00.txt  GIx_p=2.01.txt  GIx_p=2.02.txt  GIx_p=2.03.txt  GIx_p=2.04.txt  GIx_p=2.05.txt  GIx_p=2.06.txt  GIx_p=2.07.txt  GIx_p=2.08.txt  GIx_p=2.09.txt  GIx_p=2.1.txt  GIx_p=2.10.txt  GIx_p=2.11.txt  GIx_p=2.12.txt  GIx_p=2.13.txt  GIx_p=2.14.txt  GIx_p=2.15.txt  GIx_p=2.16.txt  GIx_p=2.17.txt  GIx_p=2.18.txt  GIx_p=2.19.txt  GIx_p=2.2.txt  GIx_p=2.20.txt  GIx_p=2.21.txt  GIx_p=2.22.txt  GIx_p=2.23.txt  GIx_p=2.24.txt  GIx_p=2.25.txt  GIx_p=2.26.txt  GIx_p=2.27.txt  GIx_p=2.28.txt  GIx_p=2.29.txt  GIx_p=2.3.txt  GIx_p=2.30.txt  GIx_p=2.31.txt  GIx_p=2.32.txt  GIx_p=2.33.txt  GIx_p=2.34.txt  GIx_p=2.35.txt  (+476 more)
src/jetfuncs/synchrotron_integrals/GQx/: GQx_p=2.0.txt  GQx_p=2.00.txt  GQx_p=2.01.txt  GQx_p=2.02.txt  GQx_p=2.03.txt  GQx_p=2.04.txt  GQx_p=2.05.txt  GQx_p=2.06.txt  GQx_p=2.07.txt  GQx_p=2.08.txt  GQx_p=2.09.txt  GQx_p=2.1.txt  GQx_p=2.10.txt  GQx_p=2.11.txt  GQx_p=2.12.txt  GQx_p=2.13.txt  GQx_p=2.14.txt  GQx_p=2.15.txt  GQx_p=2.16.txt  (+497 more)
tests/: test_convert_units_len_xy_zero.py  test_get_quantity_coverage.py  test_io_fits.py  test_model_smoke.py  test_postprocess.py  test_rt_slow_fast_cooling.py  test_smoke.py  test_transforms.py
(+2055 files in other folders)
