[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffjet"
version = "0.1.0"
description = "Jet modeling utilities (includes pretabulated synchrotron quantities)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
progress = ["tqdm>=4"]
dev = [
  "pytest>=7",
  "pytest-cov>=7",
  "ruff>=0.5",
  "pre-commit>=3",
  "build>=1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jetfuncs = ["synchrotron_integrals/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"src/jetfuncs/_core.py" = ["F841"]